--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,9 +96,16 @@ body {
   }
 }
 
+.ql-code-block-container {
+  border: 1px solid hsl(var(--input));
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  background: #374151;
+}
+
 .ql-code-block {
   font-size: 15px !important;
-  color: #374151 !important;
+  color: #f8f9fa !important;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
