--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,9 @@
 
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
+    --content: #09090b;
     --card: 0 0% 100%;
+    --white: #fff;
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
@@ -48,7 +50,10 @@
   [data-bs-theme="dark"] {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
+    --foreground: 0 0% 98%;
+    --content: #fafafaab;
     --card: 240 10% 3.9%;
+    --white: #000;
     --card-foreground: 0 0% 98%;
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
@@ -91,13 +96,26 @@ body {
   background-color: hsl(var(--background));
   color: hsl(var(--foreground));
 }
-
-/* {
-  @apply box-border;
+.content {
+  color: var(--content);
 }
-body {
-  @apply bg-background text-foreground;
-} */
+.dark .content strong,
+.dark .example strong {
+  color: #fff !important;
+}
+.dark .content span,
+.dark .example span {
+  background: none;
+}
+.blog-header {
+  background: var(--content);
+}
+pre code.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 1em;
+  border-radius: 4px;
+}
 
 @layer utilities {
   .no-scrollbar::-webkit-scrollbar {
@@ -130,25 +148,25 @@ body {
 
 @layer base {
   h1 {
-    @apply text-4xl font-bold text-gray-900;
+    @apply text-4xl font-bold;
   }
   h2 {
-    @apply text-3xl font-semibold text-gray-800;
+    @apply text-3xl font-semibold;
   }
   h3 {
-    @apply text-2xl font-medium text-gray-800;
+    @apply text-2xl font-medium;
   }
   h4 {
-    @apply text-xl font-medium text-gray-700;
+    @apply text-xl font-medium;
   }
   h5 {
-    @apply text-lg font-semibold text-gray-700;
+    @apply text-lg font-semibold;
   }
   h6 {
-    @apply text-base font-semibold text-gray-600;
+    @apply text-base font-semibold;
   }
   p {
-    @apply text-base text-gray-700 leading-relaxed mb-1;
+    @apply text-base  leading-relaxed mb-1;
   }
   a {
     @apply font-medium;
