--- a/src/components/tiptap-editor/tiptap-editor.scss
+++ b/src/components/tiptap-editor/tiptap-editor.scss
@@ -10,7 +10,7 @@
   .tiptap-control-group {
     .editor-btn {
       border: 1px solid #e0e0e0;
-      width: 40px;
+      min-width: 40px !important;
       height: 40px;
       padding: 5px;
       border-radius: 4px;
@@ -24,7 +24,7 @@
     border: 1px solid #e0e0e0;
     border-radius: 4px;
     padding: 1rem;
-    margin: 4px 0 1rem;
+    margin: 4px 0;
     &.ProseMirror-focused {
       border: 1px solid #e0e0e0 !important;
       outline: none !important;
