--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,6 +119,12 @@ pre code.hljs {
 }
 
 @layer utilities {
+  input:-webkit-autofill {
+    background-color: transparent !important;
+    box-shadow: 0 0 0px 1000px white inset !important;
+    -webkit-text-fill-color: #000 !important;
+  }
+
   .no-scrollbar::-webkit-scrollbar {
     @apply hidden;
   }
