--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -158,7 +158,7 @@ pre code.hljs {
   .text-content ul li,
   .text-content ol li {
     margin: 0 0 0 1.5rem;
-    font-size: 15px !important;
+    font-size: 14px !important;
   }
   .tiptap-control-group {
     position: sticky;
@@ -179,7 +179,7 @@ pre code.hljs {
     cursor: pointer;
   }
   code {
-    font-size: 15px !important;
+    font-size: 14px !important;
   }
 }
 
@@ -191,8 +191,8 @@ pre code.hljs {
 }
 
 .ql-code-block {
-  font-size: 15px !important;
-  color: #f8f9fa !important;
+  font-size: 14px !important;
+  color: #1d2434b8 !important;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -217,7 +217,7 @@ pre code.hljs {
     @apply text-base font-semibold mb-[0.75rem];
   }
   p {
-    @apply text-[15px] leading-relaxed mb-1;
+    @apply text-[14px] leading-relaxed mb-1;
   }
   a {
     @apply font-medium;
